force-app/main/default/objects/Automation_Bypass_Rule__mdt/Automation_Bypass_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Org-wide automation-bypass switches, keyed by SObject API name. Read at the top of every trigger / flow. Pairs with the per-user "Bypass Validations" custom permission to give support engineers a metadata-only kill switch when something misbehaves.</description>
    <label>Automation Bypass Rule</label>
    <pluralLabel>Automation Bypass Rules</pluralLabel>
</CustomObject>