force-app/main/default/objects/Automation_Bypass_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Is this bypass currently in effect? Default false. The trigger only honours rows where Active__c = true. Set false (don't delete the row) to keep audit history.</description>
    <inlineHelpText>Is this bypass currently active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>