force-app/main/default/objects/Automation_Bypass_Rule__mdt/fields/Bypass_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Reason__c</fullName>
    <description
  >Why automation is being bypassed for this object (typically an incident ticket / explanation). Helps auditors understand the duration and reason after the fact.</description>
    <inlineHelpText
  >Why this bypass exists. Link to a ticket if applicable.</inlineHelpText>
    <label>Bypass Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>