force-app/main/default/objects/Automation_Bypass_Rule__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description
  >SObject API name to bypass (e.g. 'Opportunity', 'Order'). Trigger handlers compare against this in their entry point.</description>
    <inlineHelpText>SObject API name to bypass automation for.</inlineHelpText>
    <label>Object Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>